--- a/lab-oop_in_python.ipynb
+++ b/lab-oop_in_python.ipynb
@@ -30,17 +30,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "class Vehicle:\n",
     "    # Hint: Define __init__ method with parameters for max_speed and mileage\n",
-    "    pass\n",
+    "    def __init__(self, max_speed, mileage):\n",
+    "        self.max_speed = max_speed\n",
+    "        self.mileage = mileage\n",
     "\n",
     "# Example instantiation\n",
-    "modelX = Vehicle()  # Create an instance of Vehicle\n",
+    "modelX = Vehicle(100, 0)  # Create an instance of Vehicle\n",
     "\n",
     "# Print attributes\n",
     "print(modelX.max_speed, modelX.mileage)  # Expected output: (value of max_speed, value of mileage)"
@@ -56,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +297,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Ironhack (3.14.2)",
    "language": "python",
    "name": "python3"
   },
@@ -301,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
